<?xml version="1.0"?>
<package format="2">
  <name>gps_to_local_euclidean_srvs</name>
  <version>0.1.0</version>
  <description>
    Service files for gps_to_local_euclidean package
  </description>

  <maintainer email="maciej.zurad@gmail.com">Maciej Zurad</maintainer>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

</package>
